--- a/POTFILES.in
+++ b/POTFILES.in
@@ -16,11 +16,13 @@ build/parseBuildInstallClean.c
 build/parseChangelog.c
 build/parseDescription.c
 build/parseFiles.c
+build/parsePolicies.c
 build/parsePreamble.c
 build/parsePrep.c
 build/parseReqs.c
 build/parseScript.c
 build/parseSpec.c
+build/policies.c
 build/poptBT.c
 build/reqprov.c
 build/rpmfc.c
@@ -48,6 +50,7 @@ lib/rpmgi.c
 lib/rpminstall.c
 lib/rpmlead.c
 lib/rpmlock.c
+lib/rpmplugins.c
 lib/rpmprob.c
 lib/rpmps.c
 lib/rpmrc.c
@@ -69,6 +72,8 @@ lib/tagexts.c
 lib/tagname.c
 lib/backend/db3.c
 lib/backend/dbconfig.c
+plugins/exec.c
+plugins/sepolicy.c
 python/rpmts-py.c
 rpmio/argv.c
 rpmio/digest.c
