Move librpmsign to its own subdirectory in the sources

--- a/POTFILES.in
+++ b/POTFILES.in
@@ -48,7 +48,6 @@ lib/rpmchecksig.c
 lib/rpmchroot.c
 lib/rpmds.c
 lib/rpmfi.c
-lib/rpmgensig.c
 lib/rpmgi.c
 lib/rpminstall.c
 lib/rpmlead.c
@@ -90,5 +89,6 @@ rpmio/rpmstring.c
 rpmio/rpmsq.c
 rpmio/rpmsw.c
 rpmio/url.c
+sign/rpmgensig.c
 tools/rpmdeps.c
 tools/rpmgraph.c
