Change po/POTFILES.in for lib/backend/dbconfig.c renamed to dbi.c

--- a/POTFILES.in
+++ b/POTFILES.in
@@ -72,7 +72,7 @@ lib/rpmdb.c
 lib/tagexts.c
 lib/tagname.c
 lib/backend/db3.c
-lib/backend/dbconfig.c
+lib/backend/dbi.c
 python/rpmts-py.c
 rpmio/argv.c
 rpmio/digest.c
