Add update-pot cmake target to update the translation source rpm.pot
Add a target to manually update the list of translatable strings.
This is a highly unusual target as it updates the source rather than
builds something, and the results should be committed to git.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,22 @@
 find_package(Gettext REQUIRED)
+find_program(XGETTEXT xgettext REQUIRED)
+
+# Generate an up-to-date translation source .pot file from the C sources.
+# NOTE: this is not your average build-something rule, this updates the
+# rpm.pot SOURCE, which you then should commit into git.
+add_custom_target(update-pot
+	  COMMENT "Updating translation source"
+	  COMMAND ${XGETTEXT}
+			--package-name=${CMAKE_PROJECT_NAME}
+			--package-version=${CMAKE_PROJECT_VERSION}
+			--output=${CMAKE_CURRENT_SOURCE_DIR}/rpm.pot
+			--language=C
+			--no-location
+			--keyword=_ --keyword=N_
+			--files-from=${CMAKE_CURRENT_SOURCE_DIR}/POTFILES.in
+	  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	  SOURCES ${POT_SOURCES}
+)
 
 # Discover our translations
 file(READ LINGUAS linguas)
