Fix update-pot target
Target `update-pot` complained about not finding sources in the `tools`
directory. Additionally, `POTFILES.in` was not updated when `rpm2cpio`
was retired and `rpm2cpio.c` removed from the repository.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ add_custom_target(update-pot
 			--no-location
 			--keyword=_ --keyword=N_
 			--files-from=${CMAKE_CURRENT_SOURCE_DIR}/POTFILES.in
+			--directory=tools
+			--directory=build
+			--directory=.
 	  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 	  SOURCES ${POT_SOURCES}
 )
