Adjust for our commands moving to tools/ and rpm2cpio drop
This should've been in commit 86d99a1d20bbebfeb4427c99b1bb1053029c3317
and 833cd91bed2d1bfa0146ac6f14be0d2b1ef3a426, but they're in a different
repository. This split-repo setup is clearly broken in this regard,
we should probably just look for all .c sources instead.

--- a/POTFILES.in
+++ b/POTFILES.in
@@ -1,13 +1,4 @@
 # List of files which contain translatable strings.
-cliutils.c
-rpm2archive.c
-rpm2cpio.c
-rpmbuild.c
-rpmdb.c
-rpmkeys.c
-rpm.c
-rpmsign.c
-rpmspec.c
 build/build.c
 build/files.c
 build/misc.c
@@ -96,7 +87,15 @@ rpmio/rpmvercmp.c
 rpmio/url.c
 sign/rpmgensig.c
 sign/rpmsignfiles.c
+tools/cliutils.c
+tools/rpm.c
+tools/rpm2archive.c
+tools/rpmdb.c
+tools/rpmbuild.c
 tools/rpmdeps.c
 tools/rpmgraph.c
+tools/rpmkeys.c
 tools/rpmlua.c
+tools/rpmsign.c
+tools/rpmspec.c
 tools/rpmuncompress.c
