Update POTFILES.in for our C++ mass rename last year, oops...

--- a/POTFILES.in
+++ b/POTFILES.in
@@ -1,101 +1,102 @@
 # List of files which contain translatable strings.
-build/build.c
-build/files.c
-build/misc.c
-build/pack.c
-build/parseSimpleScript.c
-build/parseChangelog.c
-build/parseDescription.c
-build/parseFiles.c
-build/parsePolicies.c
-build/parsePreamble.c
-build/parsePrep.c
-build/parseReqs.c
-build/parseScript.c
-build/parseSpec.c
-build/policies.c
-build/reqprov.c
-build/rpmfc.c
-build/spec.c
-lib/backend/dbi.c
-lib/backend/dummydb.c
-lib/backend/ndb/glue.c
+build/build.cc
+build/files.cc
+build/misc.cc
+build/pack.cc
+build/parseSimpleScript.cc
+build/parseChangelog.cc
+build/parseDescription.cc
+build/parseFiles.cc
+build/parsePolicies.cc
+build/parsePreamble.cc
+build/parsePrep.cc
+build/parseReqs.cc
+build/parseScript.cc
+build/parseSpec.cc
+build/policies.cc
+build/reqprov.cc
+build/rpmfc.cc
+build/spec.cc
+lib/backend/dbi.cc
+lib/backend/dummydb.cc
+lib/backend/ndb/glue.cc
 lib/backend/ndb/rpmidx.c
 lib/backend/ndb/rpmpkg.c
 lib/backend/ndb/rpmxdb.c
-lib/backend/sqlite.c
-lib/cpio.c
-lib/depends.c
-lib/formats.c
-lib/fprint.c
-lib/fsm.c
-lib/header.c
-lib/headerfmt.c
-lib/manifest.c
-lib/order.c
-lib/package.c
-lib/poptALL.c
-lib/poptI.c
-lib/poptQV.c
-lib/psm.c
-lib/query.c
-lib/relocation.c
-lib/rpmal.c
-lib/rpmchecksig.c
-lib/rpmchroot.c
-lib/rpmdb.c
-lib/rpmds.c
-lib/rpmfi.c
-lib/rpmgi.c
-lib/rpminstall.c
-lib/rpmlead.c
-lib/rpmlock.c
-lib/rpmplugins.c
-lib/rpmprob.c
-lib/rpmps.c
-lib/rpmrc.c
-lib/rpmscript.c
-lib/rpmtd.c
-lib/rpmte.c
-lib/rpmts.c
-lib/rpmvs.c
-lib/signature.c
-lib/tagexts.c
-lib/tagname.c
-lib/transaction.c
-lib/verify.c
+lib/backend/sqlite.cc
+lib/cpio.cc
+lib/depends.cc
+lib/formats.cc
+lib/fprint.cc
+lib/fsm.cc
+lib/header.cc
+lib/headerfmt.cc
+lib/keystore.cc
+lib/manifest.cc
+lib/order.cc
+lib/package.cc
+lib/poptALL.cc
+lib/poptI.cc
+lib/poptQV.cc
+lib/psm.cc
+lib/query.cc
+lib/relocation.cc
+lib/rpmal.cc
+lib/rpmchecksig.cc
+lib/rpmchroot.cc
+lib/rpmdb.cc
+lib/rpmds.cc
+lib/rpmfi.cc
+lib/rpmgi.cc
+lib/rpminstall.cc
+lib/rpmlead.cc
+lib/rpmlock.cc
+lib/rpmplugins.cc
+lib/rpmprob.cc
+lib/rpmps.cc
+lib/rpmrc.cc
+lib/rpmscript.cc
+lib/rpmtd.cc
+lib/rpmte.cc
+lib/rpmts.cc
+lib/rpmvs.cc
+lib/signature.cc
+lib/tagexts.cc
+lib/tagname.cc
+lib/transaction.cc
+lib/verify.cc
 plugins/ima.c
 plugins/prioreset.c
 plugins/selinux.c
 plugins/syslog.c
 plugins/systemd_inhibit.c
 python/rpmts-py.c
-rpmio/argv.c
-rpmio/digest.c
-rpmio/expression.c
-rpmio/macro.c
-rpmio/rpmfileutil.c
-rpmio/rpmio.c
-rpmio/rpmlog.c
-rpmio/rpmlua.c
-rpmio/rpmmalloc.c
-rpmio/rpmpgp.c
-rpmio/rpmsq.c
-rpmio/rpmstring.c
-rpmio/rpmsw.c
-rpmio/rpmvercmp.c
-rpmio/url.c
-sign/rpmgensig.c
-sign/rpmsignfiles.c
-tools/cliutils.c
-tools/rpm.c
-tools/rpm2archive.c
-tools/rpmdb.c
-tools/rpmbuild.c
-tools/rpmdeps.c
-tools/rpmgraph.c
-tools/rpmkeys.c
-tools/rpmlua.c
-tools/rpmsign.c
-tools/rpmspec.c
-tools/rpmuncompress.c
+rpmio/argv.cc
+rpmio/digest.cc
+rpmio/expression.cc
+rpmio/macro.cc
+rpmio/rpmfileutil.cc
+rpmio/rpmio.cc
+rpmio/rpmlog.cc
+rpmio/rpmlua.cc
+rpmio/rpmmalloc.cc
+rpmio/rpmpgp.cc
+rpmio/rpmsq.cc
+rpmio/rpmstring.cc
+rpmio/rpmsw.cc
+rpmio/rpmvercmp.cc
+rpmio/url.cc
+sign/rpmgensig.cc
+sign/rpmsignfiles.cc
+tools/cliutils.cc
+tools/rpm.cc
+tools/rpm2archive.cc
+tools/rpmdb.cc
+tools/rpmbuild.cc
+tools/rpmdeps.cc
+tools/rpmgraph.cc
+tools/rpmkeys.cc
+tools/rpmlua.cc
+tools/rpmsign.cc
+tools/rpmspec.cc
+tools/rpmuncompress.cc
